<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.ProfileActivity"
    android:id="@+id/swipe_layout">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/email_text"
        style="@style/text_size.all_text_in_profile_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@id/first_name_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/current_email"
        style="@style/text_size.all_text_in_profile_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/email_text"
        app:layout_constraintStart_toEndOf="@id/barrier2"
        app:layout_constraintTop_toTopOf="@+id/email_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/first_name_text"
        style="@style/text_size.all_text_in_profile_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        app:layout_constraintBottom_toTopOf="@+id/last_name_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/current_first_name"
        style="@style/text_size.all_text_in_profile_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/first_name_text"
        app:layout_constraintStart_toEndOf="@id/barrier2"
        app:layout_constraintTop_toTopOf="@+id/first_name_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/last_name_text"
        style="@style/text_size.all_text_in_profile_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        app:layout_constraintBottom_toTopOf="@+id/birthday_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/current_last_name"
        style="@style/text_size.all_text_in_profile_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/last_name_text"
        app:layout_constraintStart_toEndOf="@id/barrier2"
        app:layout_constraintTop_toTopOf="@+id/last_name_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/birthday_text"
        style="@style/text_size.all_text_in_profile_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        app:layout_constraintBottom_toTopOf="@+id/note_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/current_birthday"
        style="@style/text_size.all_text_in_profile_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/birthday_text"
        app:layout_constraintStart_toEndOf="@id/barrier2"
        app:layout_constraintTop_toTopOf="@+id/birthday_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_note" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/note_text"
        style="@style/text_size.all_text_in_profile_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        app:layout_constraintBottom_toTopOf="@+id/current_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_text" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/current_note"
        style="@style/text_size.all_text_in_profile_activity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/logout_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_text" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="birthday_text,email_text,first_name_text,last_name_text,note_text"
        tools:layout_editor_absoluteX="411dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>