<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.LoginActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_edit_text"
        style="@style/Main_screen_edit_text.main_screen_login_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_text"
        app:layout_constraintBottom_toTopOf="@+id/password_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_edit_text"
        style="@style/Main_screen_edit_text.main_screen_password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_text"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="@+id/login_edit_text"
        app:layout_constraintStart_toStartOf="@+id/login_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/login_edit_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        style="@style/main_screen_login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/login_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_edit_text"
        app:layout_constraintStart_toStartOf="@+id/password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/error_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="asdfasdfasdfsadf"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/login_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/login_edit_text"
        app:layout_constraintStart_toStartOf="@+id/login_edit_text" />
</androidx.constraintlayout.widget.ConstraintLayout>